# simple_chat

./: Dockerfile  LICENSE  README.md  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
app/: dump.rdb
app/accounts/: forms.py
app/accounts/templates/accounts/: sign_in.html
app/chat/: consumers.py  serializers.py  tasks.py
app/chat/migrations/: 0001_initial.py  0002_alter_chatmessage_user_id.py
app/chat/static/chat/js/: helpers.js
app/chat/templates/chat/: thread_list.html
app/core/: asgi.py  settings.py
chat_app/accounts/: urls.py  views.py
chat_app/accounts/static/accounts/css/: logout.css  sign_up_sign_in.css  user_profile.css
chat_app/accounts/templates/accounts/: logout.html  sign_up.html
chat_app/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
chat_app/chat/static/chat/js/: helpers.js
chat_app/chat/templates/chat/: thread_detail.html  thread_list.html
chat_app/core/: asgi.py  settings.py  urls.py
