[tool.poetry]
name = "simple_chat"
version = "0.1.0"
description = "simple chat app"
authors = ["GonnaFlyMethod <alexandergusakov@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-environ = "^0.4.5"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
